// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Size 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bp bq br bs"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Default
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 bt b5 bu b7 b8 b9 ba bv bw bx by bk bl bm bn bo"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Large
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 bz b5 c0 b7 b8 b9 ba c1 c2 c3 c4 bf bg bh bi bj"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Larger
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Button Variant 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bg bh bi bj"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Default
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bk bl bm bn bo"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Primary
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bp bq br bs"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Secondary
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Card Poster 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd ce"
      data-baseweb="card"
      onClick={[Function]}
    >
      <img
        className="b9 b7 cf cg cd ch ce ci"
        src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
      />
      <div
        className="cj ck cl cm"
      >
        <h1
          className="b3 cn b5 co cp az b0 b1 cq cr cs ct cu cv cw cx cy cz"
        >
          July 26
        </h1>
        <div
          className="d0 bf b3 bt d1 c0"
        />
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Card Thumbnail 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd ce"
      data-baseweb="card"
      onClick={[Function]}
    >
      <img
        className="b9 b7 cf cg cd d2 ce d3"
        src="https://image.tmdb.org/t/p/w300/aQLygZOIKai6aaiBAeeKpIWO5nc.jpg"
      />
      <div
        className="cj ck cl cm"
      >
        <div
          className="d0 bf b3 bt d1 c0"
        >
          <div
            className="d0 d4 b3 bt d1 c0"
          >
            <div
              className="cp cm"
              data-baseweb="block"
            >
              Once Upon a Time in Hollywood
            </div>
            <div
              className=""
              data-baseweb="block"
            >
              <svg
                className="d5 d6 d7 d8 d9"
                data-baseweb="icon"
                viewBox="0 0 20 20"
              >
                <title>
                  Show
                </title>
                <path
                  d="M.2 10a11 11 0 0119.6 0A11 11 0 01.2 10zm9.8 4a4 4 0 100-8 4 4 0 000 8zm0-2a2 2 0 110-4 2 2 0 010 4z"
                />
              </svg>
               7.5k
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Credit Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="da db cr ct dc"
    >
      <div
        className="dd de df"
      >
        <div
          aria-label={null}
          className="dg dh di dj dk d5"
          data-baseweb="avatar"
          role={null}
        >
          <img
            alt="Joaquin Phoenix"
            className="dg dh di dj dk dl dm dn do"
            onError={[Function]}
            src="https://image.tmdb.org/t/p/w185/zixTWuMZ1D8EopgOhLVZ6Js2ux3.jpg"
          />
        </div>
      </div>
      <div
        className="dp de dq dr"
      >
        <div
          className="cp b3 d1 bz ds"
          data-baseweb="typo-paragraphlarge"
        >
          Joaquin Phoenix
        </div>
        <div
          className="d4 b3 b5 b4 b6"
          data-baseweb="typo-labelsmall"
        >
          Arthur Fleck / Joker
        </div>
      </div>
    </div>
    <div
      className="da db cr ct dc"
    >
      <div
        className="dd de df"
      >
        <div
          aria-label={null}
          className="dg dh di dj dk d5"
          data-baseweb="avatar"
          role={null}
        >
          <img
            alt="Robert De Niro"
            className="dg dh di dj dk dl dm dn do"
            onError={[Function]}
            src="https://image.tmdb.org/t/p/w185/8Bgdfv1oN9Mw0YuMHP6fw8KzDkc.jpg"
          />
        </div>
      </div>
      <div
        className="dp de dq dr"
      >
        <div
          className="cp b3 d1 bz ds"
          data-baseweb="typo-paragraphlarge"
        >
          Robert De Niro
        </div>
        <div
          className="d4 b3 b5 b4 b6"
          data-baseweb="typo-labelsmall"
        >
          Murray Franklin
        </div>
      </div>
    </div>
    <div
      className="da db cr ct dc"
    >
      <div
        className="dd de df"
      >
        <div
          aria-label={null}
          className="dg dh di dj dk d5"
          data-baseweb="avatar"
          role={null}
        >
          <img
            alt="Zazie Beetz"
            className="dg dh di dj dk dl dm dn do"
            onError={[Function]}
            src="https://image.tmdb.org/t/p/w185/sgxzT54GnvgeMnOZgpQQx9csAdd.jpg"
          />
        </div>
      </div>
      <div
        className="dp de dq dr"
      >
        <div
          className="cp b3 d1 bz ds"
          data-baseweb="typo-paragraphlarge"
        >
          Zazie Beetz
        </div>
        <div
          className="d4 b3 b5 b4 b6"
          data-baseweb="typo-labelsmall"
        >
          Sophie Dumond
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Deck Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="dt du dv"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <ul
        className="dw dx dy dt dz dc e0 e1 e2 e3 e4"
      >
        <li
          className="e5 dk"
        >
          <div
            className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd ce"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b9 b7 cf cg cd ch ce ci"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="cj ck cl cm"
            >
              <h1
                className="b3 cn b5 co cp az b0 b1 cq cr cs ct cu cv cw cx cy cz"
              >
                July 26
              </h1>
              <div
                className="d0 bf b3 bt d1 c0"
              />
            </div>
          </div>
        </li>
        <li
          className="e5 dk"
        >
          <div
            className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd ce"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b9 b7 cf cg cd ch ce ci"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="cj ck cl cm"
            >
              <h1
                className="b3 cn b5 co cp az b0 b1 cq cr cs ct cu cv cw cx cy cz"
              >
                July 26
              </h1>
              <div
                className="d0 bf b3 bt d1 c0"
              />
            </div>
          </div>
        </li>
        <li
          className="e5 dk"
        >
          <div
            className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd ce"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b9 b7 cf cg cd ch ce ci"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="cj ck cl cm"
            >
              <h1
                className="b3 cn b5 co cp az b0 b1 cq cr cs ct cu cv cw cx cy cz"
              >
                July 26
              </h1>
              <div
                className="d0 bf b3 bt d1 c0"
              />
            </div>
          </div>
        </li>
        <li
          className="e5 dk"
        >
          <div
            className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd ce"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b9 b7 cf cg cd ch ce ci"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="cj ck cl cm"
            >
              <h1
                className="b3 cn b5 co cp az b0 b1 cq cr cs ct cu cv cw cx cy cz"
              >
                July 26
              </h1>
              <div
                className="d0 bf b3 bt d1 c0"
              />
            </div>
          </div>
        </li>
        <li
          className="e5 dk"
        >
          <div
            className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd ce"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b9 b7 cf cg cd ch ce ci"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="cj ck cl cm"
            >
              <h1
                className="b3 cn b5 co cp az b0 b1 cq cr cs ct cu cv cw cx cy cz"
              >
                July 26
              </h1>
              <div
                className="d0 bf b3 bt d1 c0"
              />
            </div>
          </div>
        </li>
        <li
          className="e5 dk"
        >
          <div
            className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd ce"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b9 b7 cf cg cd ch ce ci"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="cj ck cl cm"
            >
              <h1
                className="b3 cn b5 co cp az b0 b1 cq cr cs ct cu cv cw cx cy cz"
              >
                July 26
              </h1>
              <div
                className="d0 bf b3 bt d1 c0"
              />
            </div>
          </div>
        </li>
        <li
          className="e5 dk"
        >
          <div
            className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd ce"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b9 b7 cf cg cd ch ce ci"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="cj ck cl cm"
            >
              <h1
                className="b3 cn b5 co cp az b0 b1 cq cr cs ct cu cv cw cx cy cz"
              >
                July 26
              </h1>
              <div
                className="d0 bf b3 bt d1 c0"
              />
            </div>
          </div>
        </li>
      </ul>
      <button
        className="e6 e7 e8 av e9 ea eb ec bz ed ee ef eg eh"
        onClick={[Function]}
      >
        &lt;
      </button>
      <button
        className="e6 e7 e8 av e9 ea eb ec bz ed ee ef eg ei"
        onClick={[Function]}
      >
        &gt;
      </button>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Layout Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="ej ek el em en"
    >
      <p
        className="b3 bt d1 c0 eo ep eq er es"
      >
        Inside content
      </p>
      <div
        className="dc et dt ej eu ev"
      >
        <div
          className="dp ew ex"
        >
          <h2
            className="b3 ey b5 ds ez f0 cq ep f1 f2 f3 f4 f5"
          >
            Section 1
          </h2>
        </div>
        <div
          className="f6 ew f7"
        >
          <div
            className="f8"
          >
            <p
              className="b3 bt d1 c0 eo ep eq er es"
            >
              Inside section 1
            </p>
          </div>
        </div>
      </div>
      <div
        className="dc et dt ej eu ev"
      >
        <div
          className="dp ew ex"
        >
          <h2
            className="b3 ey b5 ds ez f0 cq ep f1 f2 f3 f4 f5"
          >
            Section 2
          </h2>
        </div>
        <div
          className="f6 ew f7"
        >
          <div
            className="f8"
          >
            <p
              className="b3 bt d1 c0 eo ep eq er es"
            >
              Inside section 2
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Modal Size 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bp bq br bs"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open default modal
    </button>
    <br />
    <br />
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bp bq br bs"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open full modal
    </button>
    <br />
    <br />
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bp bq br bs"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open auto modal
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots PaginatedItems Base 1`] = `
Array [
  <div
    className=""
  >
    <div>
      <div
        className="f9 fa fb bg fc fd fe ff dc et dz e0 ck"
      >
        <div
          className="dt fg fh fi"
          role="rowgroup"
        >
          <div
            className="dc af"
            role="row"
          >
            <div
              className="b3 b4 d1 bu bf dc fi cs ct cu cr"
            >
              <div
                className="da db cr ct dc"
              >
                <div
                  className="dd de df"
                >
                  <div
                    aria-label={null}
                    className="dg dh di dj dk d5"
                    data-baseweb="avatar"
                    role={null}
                  >
                    <img
                      alt="Joaquin Phoenix"
                      className="dg dh di dj dk dl dm dn do"
                      onError={[Function]}
                      src="https://image.tmdb.org/t/p/w185/zixTWuMZ1D8EopgOhLVZ6Js2ux3.jpg"
                    />
                  </div>
                </div>
                <div
                  className="dp de dq dr"
                >
                  <div
                    className="cp b3 d1 bz ds"
                    data-baseweb="typo-paragraphlarge"
                  >
                    Joaquin Phoenix
                  </div>
                  <div
                    className="d4 b3 b5 b4 b6"
                    data-baseweb="typo-labelsmall"
                  >
                    Arthur Fleck / Joker
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="dc af"
            role="row"
          >
            <div
              className="b3 b4 d1 bu bf dc fi cs ct cu cr"
            >
              <div
                className="da db cr ct dc"
              >
                <div
                  className="dd de df"
                >
                  <div
                    aria-label={null}
                    className="dg dh di dj dk d5"
                    data-baseweb="avatar"
                    role={null}
                  >
                    <img
                      alt="Robert De Niro"
                      className="dg dh di dj dk dl dm dn do"
                      onError={[Function]}
                      src="https://image.tmdb.org/t/p/w185/8Bgdfv1oN9Mw0YuMHP6fw8KzDkc.jpg"
                    />
                  </div>
                </div>
                <div
                  className="dp de dq dr"
                >
                  <div
                    className="cp b3 d1 bz ds"
                    data-baseweb="typo-paragraphlarge"
                  >
                    Robert De Niro
                  </div>
                  <div
                    className="d4 b3 b5 b4 b6"
                    data-baseweb="typo-labelsmall"
                  >
                    Murray Franklin
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="dc af"
            role="row"
          >
            <div
              className="b3 b4 d1 bu bf dc fi cs ct cu cr"
            >
              <div
                className="da db cr ct dc"
              >
                <div
                  className="dd de df"
                >
                  <div
                    aria-label={null}
                    className="dg dh di dj dk d5"
                    data-baseweb="avatar"
                    role={null}
                  >
                    <img
                      alt="Zazie Beetz"
                      className="dg dh di dj dk dl dm dn do"
                      onError={[Function]}
                      src="https://image.tmdb.org/t/p/w185/sgxzT54GnvgeMnOZgpQQx9csAdd.jpg"
                    />
                  </div>
                </div>
                <div
                  className="dp de dq dr"
                >
                  <div
                    className="cp b3 d1 bz ds"
                    data-baseweb="typo-paragraphlarge"
                  >
                    Zazie Beetz
                  </div>
                  <div
                    className="d4 b3 b5 b4 b6"
                    data-baseweb="typo-labelsmall"
                  >
                    Sophie Dumond
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c1 c2 dc"
    >
      <div
        aria-label="pagination"
        className="dc af bf b3 bt b5 bu"
        data-baseweb="pagination"
      >
        <button
          className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw fj ay az b0 b1 b2 b3 bt fk bu b7 b8 b9 ba bv bw bx by d4 bg fl fm fn fo fp fq"
          data-baseweb="button"
          disabled={false}
          onClick={[Function]}
        >
          &lt;
        </button>
        <div
          className="dv dr fr fs"
        >
          <div
            aria-controls={null}
            aria-expanded="false"
            aria-haspopup="true"
            className="b3 bt d1 c0 dk dv dt"
            data-baseweb="select"
            onClick={[Function]}
          >
            <div
              className="b9 b7 b8 ba dk du dt dc ft av fu fa fv at au bf fw bg fx"
              onClick={[Function]}
              onKeyDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="dk dv dp ew fy dc af fz du bb bc g0 ct"
              >
                <div
                  aria-selected="true"
                  className="bu dk g1 dz cg du g2 g3 g4 dv cs cu g5 be bf b3 bt b5"
                  disabled={false}
                  value={1}
                >
                  1
                </div>
                <div
                  aria-disabled={false}
                  aria-expanded={false}
                  aria-label={null}
                  aria-labelledby={null}
                  aria-required={null}
                  className="dv d5 cg bg ea fx dk aq b0 b2 az b1 cs cu cr ct g6 g7"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  tabIndex={0}
                />
              </div>
              <div
                className="dk dv dc de af g8 be"
              >
                <svg
                  className="d5 g9 bf g6 ga av"
                  data-baseweb="icon"
                  viewBox="0 0 24 24"
                >
                  <title>
                    open
                  </title>
                  <path
                    d="M12.7071 15.2929L17.1464 10.8536C17.4614 10.5386 17.2383 10 16.7929 10L7.20711 10C6.76165 10 6.53857 10.5386 6.85355 10.8536L11.2929 15.2929C11.6834 15.6834 12.3166 15.6834 12.7071 15.2929Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <span
          aria-label="page 1 of 2"
          className="gb gc bg d4"
        >
          of 2
        </span>
        <button
          className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw fj ay az b0 b1 b2 b3 bt fk bu b7 b8 b9 ba bv bw bx by d4 bg fl fm fn fo fp fq"
          data-baseweb="button"
          disabled={false}
          onClick={[Function]}
        >
          &gt;
        </button>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots PopoverMenu Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="dc gd ge"
      data-baseweb="block"
    >
      <button
        aria-controls={null}
        aria-expanded="false"
        aria-haspopup="true"
        className="dl af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba cs cu bd ct cp bg fl fn fp gf"
        data-baseweb="button"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          className="d5 g9 gg gf gh"
          data-baseweb="icon"
          viewBox="0 0 24 24"
        >
          <title>
            Menu
          </title>
          <rect
            height="2"
            rx="1"
            width="16"
            x="4"
            y="11"
          />
          <rect
            height="2"
            rx="1"
            width="16"
            x="4"
            y="5"
          />
          <rect
            height="2"
            rx="1"
            width="16"
            x="4"
            y="17"
          />
        </svg>
      </button>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots ReviewItem Review Item 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="gi gj da c2 cr ct"
    >
      <div
        className="d4 b3 b5 b4 b6"
        data-baseweb="typo-labelsmall"
      >
        Gimly
      </div>
      <p
        className="b3 bt d1 c0 eo ep eq er es"
      >
        I'm not here to explain 
        <em>
          Once Upon a Time In Hollywood
        </em>
        , just to enjoy it. 
      </p>
      <button
        className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 bt b5 bu b7 b8 b9 ba cs cu cr ct d4 bg fl gk fn gl fp gm"
        data-baseweb="button"
        disabled={false}
        onClick={[Function]}
      >
        Read more
      </button>
    </div>
    <div
      className="gn go da c2 cr ct"
    >
      <div
        className="d4 b3 b5 b4 b6"
        data-baseweb="typo-labelsmall"
      >
        JPV852
      </div>
      <p
        className="b3 bt d1 c0 eo ep eq er es"
      >
        Well, the last 15-minutes were great, the first 2.5 hours on the other hand was... uneventful. I have an interest in Hollywood, more from the 1980s though, so some of the slower scenes still kept my attention, but there's no real plot and minimal character development. 
      </p>
      <button
        className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 bt b5 bu b7 b8 b9 ba cs cu cr ct d4 bg fl gk fn gl fp gm"
        data-baseweb="button"
        disabled={false}
        onClick={[Function]}
      >
        Read more
      </button>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Search Size 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="b3 b4 d1 bu bf dc dt"
      data-baseweb="input"
    >
      <div
        className="dk dc dt fu fa gp at au b9 ba b7 b8 b3 b4 d1 bu bf gq bp"
        data-baseweb="base-input"
      >
        <div
          className="dc af bd"
        >
          <svg
            className="d5 g9 gg gr gs"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="dk bg gt gu aq dt cg gv gw da db g0 gx b3 b4 d1 bu bf gy gz"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Default"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
    <br />
    <div
      className="b3 bt d1 c0 bf dc dt"
      data-baseweb="input"
    >
      <div
        className="dk dc dt fu fa gp at au b9 ba b7 b8 b3 bt d1 c0 bf gq bp"
        data-baseweb="base-input"
      >
        <div
          className="dc af bd"
        >
          <svg
            className="d5 g9 gg gr gs"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="dk bg gt gu aq dt cg gv gw bb bc h0 h1 b3 bt d1 c0 bf gy gz"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Medium"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
    <br />
    <div
      className="b3 bz d1 ds bf dc dt"
      data-baseweb="input"
    >
      <div
        className="dk dc dt fu fa gp at au b9 ba b7 b8 b3 bz d1 ds bf gq bp"
        data-baseweb="base-input"
      >
        <div
          className="dc af bd"
        >
          <svg
            className="d5 g9 gg gr gs"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="dk bg gt gu aq dt cg gv gw bv bw h2 h3 b3 bz d1 ds bf gy gz"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Large"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Tag Base 1`] = `
Array [
  <div
    className=""
  >
    <span
      aria-label="button"
      className="b3 h4 b5 b6 af h5 fa gt h6 h7 h8 h9 dk eo ha ae g6 ft hb hc hd he hf hg bd be aq  "
      data-baseweb="tag"
      onClick={null}
      onKeyDown={[Function]}
      role="button"
      tabIndex={null}
    >
      <span
        className="du g3 g2 hh"
        title="Action"
      >
        Action
      </span>
    </span>
    <span
      aria-label="button"
      className="b3 h4 b5 b6 af h5 fa gt h6 h7 h8 h9 dk eo ha ae g6 ft hb hc hd he hf hg bd be aq  "
      data-baseweb="tag"
      onClick={null}
      onKeyDown={[Function]}
      role="button"
      tabIndex={null}
    >
      <span
        className="du g3 g2 hh"
        title="Thriller"
      >
        Thriller
      </span>
    </span>
    <span
      aria-label="button"
      className="b3 h4 b5 b6 af h5 fa gt h6 h7 h8 h9 dk eo ha ae g6 ft hb hc hd he hf hg bd be aq  "
      data-baseweb="tag"
      onClick={null}
      onKeyDown={[Function]}
      role="button"
      tabIndex={null}
    >
      <span
        className="du g3 g2 hh"
        title="Drama"
      >
        Drama
      </span>
    </span>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Typography Size 1`] = `
Array [
  <div
    className=""
  >
    <h2
      className="b3 ey b5 ds ez f0 cq ep f1 f2 f3 f4 f5"
    >
      H2: Overview
    </h2>
    <h3
      className="b3 ey fk ds hi hj"
    >
      H3: Popular movies
    </h3>
    <p
      className="b3 bt d1 c0 eo ep eq er es"
    >
      P1: As the gang return to Jumanji to rescue one of their own, they discover that nothing is as they expect. The players will have to brave parts unknown and unexplored in order to escape the world’s most dangerous game.
    </p>
  </div>,
  <div
    className=""
  />,
]
`;
